# erd-web-server

./: README.md  erd-web-server.cabal
assets/: style.css
erd_container/: Dockerfile
src/: ER.hs  ErdMain.hs  Main.hs  Parse.hs
templates/: index.karver
